Get all customers menthod updated in CustomerServiceImpl class